# projeto_SETR

RTOS/: .cproject  .mxproject  .project  RTOS_TESTE.ioc  RTOS_TESTE.launch
RTOS/Core/Src/: freertos.c  main.c  stm32f4xx_it.c
RTOS/Core/Src/Backup/: freertos.c.bak  gpio.c.bak  main.c.bak
RTOS/Debug/: RTOS_TESTE.elf  RTOS_TESTE.list  RTOS_TESTE.map  makefile  objects.list
RTOS/Debug/Core/Src/: freertos.cyclo  freertos.d  freertos.su  main.cyclo  main.d  main.su  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
RTOS/Debug/Core/Startup/: subdir.mk
RTOS/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
RTOS/Debug/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: subdir.mk
RTOS/Debug/Middlewares/ST/STM32_USB_Device_Library/Core/Src/: subdir.mk
RTOS/Debug/USB_DEVICE/App/: subdir.mk
RTOS/USB_DEVICE/App/: usbd_cdc_if.c
SOFT_LAB/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Teste/: .cproject  .mxproject  Teste Debug.launch  Teste.ioc
Teste/Core/Inc/Backup/: stm32f4xx_hal_conf.h.bak
Teste/Core/Src/: gpio.c  main.c  tim.c
Teste/Core/Src/Backup/: gpio.c.bak  main.c.bak  tim.c.bak
Teste/Debug/: Teste.elf  Teste.list  Teste.map  makefile  objects.list
Teste/Debug/Core/Src/: gpio.d  iwdg.d  main.cyclo  main.d  main.su  subdir.mk  tim.d
backend_socket_PROF/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  inutil.cpp  inutil.h  main.cpp
backend_socket_PROF/.qtcreator/: CMakeLists.txt.user.6f65758
demo2_nov25/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
demo2_nov25/.qtcreator/: CMakeLists.txt.user.6f65758
demo2_nov25/servidor/: chave_firebase.json  server_meec_lab.py
